--- a/frontend/imports/ui/client/footer.html
+++ b/frontend/imports/ui/client/footer.html
@@ -24,7 +24,7 @@
         </div>
         <div class="col-md-4">
           <div class="col-md-12">
-            <p class="title">CryptoControl DEX</p>
+            <p class="title">MahaDAO DEX</p>
           </div>
           <div class="col-md-12">
             <p>
@@ -43,18 +43,18 @@
         </div>
         <div class="col-md-4">
           <div class="col-md-12">
-            <p class="title">CryptoControl DEX</p>
+            <p class="title">MahaDAO DEX</p>
           </div>
           <div class="col-md-12">
             <p>
-              <a href="https://github.com/CryptoControl DEX/dex/issues/new" target="_blank">
+              <a href="https://github.com/MahaDAO DEX/dex/issues/new" target="_blank">
                 Report Issues
               </a>
             </p>
           </div>
           <div class="col-md-12">
             <p>
-              <a href="https://github.com/CryptoControl DEX/dex/projects/1" target="_blank">
+              <a href="https://github.com/MahaDAO DEX/dex/projects/1" target="_blank">
                 Project
               </a>
             </p>
