Ported code for matic

--- a/frontend/imports/ui/client/headers/messages.html
+++ b/frontend/imports/ui/client/headers/messages.html
@@ -7,7 +7,7 @@
           <span class="close" {{b "click: closeMessage('update')"}} ></span>
         </p>
         <ul>
-          <li><span>Go to <strong>wrap/unwrap</strong> and wrap ETH to turn it into W-ETH.</span></li>
+          <li><span>Go to <strong>wrap/unwrap</strong> and wrap MATIC to turn it into WMATIC.</span></li>
           <li><span>Go to <strong>Trade</strong> and place new orders or trade existing orders by <strong>clicking on an open order on the order book to buy/sell into it</strong>.</span>
           </li>
           <li>
