--- a/frontend/imports/ui/client/widgets/depositbalance.html
+++ b/frontend/imports/ui/client/widgets/depositbalance.html
@@ -19,11 +19,11 @@
           </tr>
         </thead>
         <tbody>
-          <tr id="eth-balance" class="clickable {{selected 'ETH'}}" {{b "click: baseChange"}}>
+          <tr id="eth-balance" class="clickable {{selected 'MATIC'}}" {{b "click: baseChange"}}>
             <td></td>
-            <td>ETH</td>
-            <td>{{{formatBalance ETHBalance '' '' true}}} ETH</td>
-            <td>{{{formatBalance wethBalance '' '' true}}} W-ETH</td>
+            <td>MATIC</td>
+            <td>{{{formatBalance ETHBalance '' '' true}}} MATIC</td>
+            <td>{{{formatBalance wethBalance '' '' true}}} WMATIC</td>
             <td></td>
           </tr>
           <!-- <tr id="gnt-balance" class="clickable {{selected 'GNT'}}" {{b "click: baseChange"}}>
