--- a/frontend/imports/ui/client/widgets/ethtokens.html
+++ b/frontend/imports/ui/client/widgets/ethtokens.html
@@ -2,7 +2,7 @@
   <form id="ethtokens">
     <h2 class="{{#if equals title 'WRAP'}}marginal{{/if}}">
       {{title}}
-      {{> whatisthis section="w-eth-wrapped-ether-tokens"}}
+      {{> whatisthis section="WMATIC-wrapped-ether-tokens"}}
     </h2>
     {{#if equals title 'WRAP'}}
       <section>
@@ -13,7 +13,7 @@
               <img src="order-warning-red.svg" fill="red">
             </span>
               <span class="order-warning-text text-danger">
-              <strong>Do not wrap all of your ETH!</strong> Otherwise you cannot pay for transactions.
+              <strong>Do not wrap all of your MATIC!</strong> Otherwise you cannot pay for transactions.
             </span>
             </div>
           </div>
@@ -26,16 +26,16 @@
           WALLET
         </span>
         <span class="available-amount">{{{formatBalance ETHBalance 5 '' true}}}</span>
-        <span class="available-currency">ETH</span>
+        <span class="available-currency">MATIC</span>
       </div>
     {{else}}
       <div class="available">
         <span class="available-label">
           WRAPPED
         </span>
-        {{#let token = (findToken 'W-ETH')}}
+        {{#let token = (findToken 'WMATIC')}}
           <span class="available-amount">{{{formatBalance token.balance 5 '' true}}}</span>
-          <span class="available-currency">W-ETH</span>
+          <span class="available-currency">WMATIC</span>
         {{/let}}
       </div>
     {{/if}}
@@ -58,7 +58,7 @@
             </div>
           </td>
           <td class="dex-currency-cell">
-            <span>{{#if equals type 'deposit'}} ETH {{else}} W-ETH {{/if}}</span>
+            <span>{{#if equals type 'deposit'}} MATIC {{else}} WMATIC {{/if}}</span>
           </td>
         </tr>
         </tbody>
