--- a/frontend/imports/ui/client/widgets/wrapper-update.html
+++ b/frontend/imports/ui/client/widgets/wrapper-update.html
@@ -13,19 +13,19 @@
                   <div class="row text-holder bordered">
                     <div class="col-xs-12">
                       We have updated the wrapper contract.<br>
-                      Please unwrap your W-ETH to use the upgraded wrapper.
+                      Please unwrap your WMATIC to use the upgraded wrapper.
                     </div>
                   </div>
                   <div class="row">
                     <div class="currency-box bordered">
                       <span class="dex-icon dex-icon-old--ethereum"></span>
-                      <span class="value"><span class="amount"></span><span class="token">W-ETH</span></span>
+                      <span class="value"><span class="amount"></span><span class="token">WMATIC</span></span>
                     </div>
                     <div class="transition">
                     </div>
                     <div class="currency-box bordered">
                       <span class="dex-icon dex-icon-new--ethereum"></span>
-                      <span class="value"><span class="amount"></span><span class="token">ETH</span></span>
+                      <span class="value"><span class="amount"></span><span class="token">MATIC</span></span>
                     </div>
                   </div>
                 </div>
