added better documentation

--- a/frontend/imports/ui/client/noethereum.html
+++ b/frontend/imports/ui/client/noethereum.html
@@ -2,22 +2,23 @@
     <div class="no-ethereum-section">
         <!-- <img class="img-ethereum-logo" alt="Ethereum" src="ethereum-logo.svg"> -->
         <h2>NOT CONNECTED TO MATIC</h2>
-        <p class="p-not-found">MahaDAO DEX requires a Matic client to be running and current. MahaDAO DEX could not detect a client running which probably means it's not installed,
+        <p class="p-not-found">The MahaDAO DEX requires a Matic client to be running and current. We could not detect a client running which probably means it's not installed,
             running or is misconfigured.</p>
-        <p class="p-use-clients">Please use one of the following clients to connect to Matic:</p>
+        <p class="p-use-clients">Follow the steps below to connect to the Matic network</p>
         <div class="div-clients">
             <div class="div-metamask">
                 <img class="img-logo" alt="Metamask" src="metamask-logo.svg">
                 <h2>METAMASK</h2>
                 <p><span class="align-number"><span class="numberCircle">1</span></span>Install <a class="span-montserrat-semi-bold a-link" href="https://metamask.io/" target="_blank">Metamask</a></p>
-                <p><span class="align-number"><span class="numberCircle">2</span></span>Use Chrome to browse <a class="span-montserrat-semi-bold a-link" href="https://dex.MahaDAO DEX.com" target="_blank">dex.MahaDAO DEX.com</a></p>
+                <p><span class="align-number"><span class="numberCircle">2</span></span><a class="span-montserrat-semi-bold a-link" href="https://docs.matic.network/docs/develop/metamask/testnet/" target="_blank">Configure</a> Matic mainnet on your Metamask</p>
+                <p><span class="align-number"><span class="numberCircle">3</span></span>Use Chrome and visit <a class="span-montserrat-semi-bold a-link" href="https://dex.MahaDAO DEX.com" target="_blank">dex.mahadao.com</a></p>
             </div>
-            <div class="div-mist">
+            <!-- <div class="div-mist">
                 <img class="img-logo" alt="Mist" src="mist-logo.svg">
                 <h2>MIST</h2>
                 <p><span class="align-number"><span class="numberCircle">1</span></span>Install and run <a class="span-montserrat-semi-bold a-link" href="https://github.com/ethereum/mist/releases" target="_blank">Mist</a></p>
                 <p><span class="align-number"><span class="numberCircle">2</span></span>Use Mist to browse <a class="span-montserrat-semi-bold a-link" href="https://dex.MahaDAO DEX.com" target="_blank">dex.MahaDAO DEX.com</a></p>
-            </div>
+            </div> -->
         </div>
         <p class="p-connect-geth">While you can also connect with <b>geth</b> or <b>parity</b>, a more advanced configuration is needed. See the
             <a href="https://github.com/MahaDAO DEX/dex/wiki#network" target="_blank">MahaDAO DEX documentation</a> for instructions.
