added telegram message

--- a/frontend/imports/ui/client/noethereum.html
+++ b/frontend/imports/ui/client/noethereum.html
@@ -10,7 +10,9 @@
                 <img class="img-logo" alt="Metamask" src="metamask-logo.svg">
                 <h2>METAMASK</h2>
                 <p><span class="align-number"><span class="numberCircle">1</span></span>Install <a class="span-montserrat-semi-bold a-link" href="https://metamask.io/" target="_blank">Metamask</a></p>
-                <p><span class="align-number"><span class="numberCircle">2</span></span><a class="span-montserrat-semi-bold a-link" href="https://docs.matic.network/docs/develop/metamask/testnet/" target="_blank">Configure</a> Matic mainnet on your Metamask</p>
+                <p><span class="align-number"><span class="numberCircle">2</span></span><a class="span-montserrat-semi-bold a-link" href="https://docs.matic.network/docs/develop/metamask/testnet/" target="_blank">Configure</a> Matic mainnet on your Metamask
+                  with the mainnet RPC:
+                  <a class="span-montserrat-semi-bold a-link" href="https://rpc-mainnet.matic.network" target="_blank">https://rpc-mainnet.matic.network</a></p>
                 <p><span class="align-number"><span class="numberCircle">3</span></span>Use Chrome and visit <a class="span-montserrat-semi-bold a-link" href="https://dex.MahaDAO DEX.com" target="_blank">dex.mahadao.com</a></p>
             </div>
             <!-- <div class="div-mist">
@@ -20,8 +22,9 @@
                 <p><span class="align-number"><span class="numberCircle">2</span></span>Use Mist to browse <a class="span-montserrat-semi-bold a-link" href="https://dex.MahaDAO DEX.com" target="_blank">dex.MahaDAO DEX.com</a></p>
             </div> -->
         </div>
-        <p class="p-connect-geth">While you can also connect with <b>geth</b> or <b>parity</b>, a more advanced configuration is needed. See the
-            <a href="https://github.com/MahaDAO DEX/dex/wiki#network" target="_blank">MahaDAO DEX documentation</a> for instructions.
+          <p class="p-connect-geth">For any issues you can join our
+            <a href="https://t.me/MaharajaDao" target="_blank">telegram group</a>
+            to get instant help from the MahaDAO
         </p>
     </div>
 </template>
